--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,7 +6,7 @@ body {
     font-family: 'Bubbler One', serif;
     word-wrap: break-word;
     word-break: break-all;
-    background-color: #59AAE2;
+    background-color: #86c6e0;
     margin: 0;
 }
 
@@ -27,16 +27,12 @@ body {
     margin: 0 auto;
 }
 
-.description {
+.status, .guide {
     text-align: center;
     font-size: 20px;
 }
 
-span.npc {
-    color: red;
-}
-
-span.you {
+span.you, span.npc {
     color: green;
 }
 
@@ -86,6 +82,12 @@ span.you {
 
 .button:hover {
     opacity: 0.7;
+}
+
+@import "Bubble";
+
+p.gameset {
+    color: red;
 }
 
 .footer {
