--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -68,6 +68,7 @@ span.you, span.npc {
     cursor: pointer;
 }
 
+/*
 .button {
     display: inline-block;
     width: 80px;
@@ -83,6 +84,7 @@ span.you, span.npc {
 .button:hover {
     opacity: 0.7;
 }
+*/
 
 @import "Bubble";
 
